tests/snapshots/assertion_parser__assertion_parser_3.snap
---
source: tests/assertion_parser.rs
expression: parsed_pred
---
iff (mem l3 u) (mem l1 u || mem l2 u)
