tests/snapshots/assertion_parser__assertion_parser_4.snap
---
source: tests/assertion_parser.rs
expression: parsed_pred
---
implies (hd l3 u) (hd l1 u || hd l2 u)
